--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,17 @@
-html,
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@font-face {
+  font-family: 'Montserrat';
+  src: local('Montserrat'), url(/fonts/Montserrat.ttf) format('ttf');
+}
+
+t html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Montserrat', sans-serif;
 }
 
 a {
@@ -13,4 +21,8 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+h1 {
+  font-family: 'Montserrat', sans-serif;
 }
